--- a/Lisec Integration/views/Lisec_Integration_views.xml
+++ b/Lisec Integration/views/Lisec_Integration_views.xml
@@ -30,7 +30,7 @@
     />
     <menuitem
         id="menu_xml_tester_wizard"
-        name="XML SALE ORDER"
+        name="Lisec Integration"
         action="action_xml_tester_wizard"
         parent="sale.sale_menu_root"
         sequence="21"
